force-app/main/default/objects/CommissionMonth__c/CommissionMonth__c.object-meta.xml
<CustomObject>
    <description>Holds the start and end date of the commission month.</description>
    <label>Commission Month</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Commission Month Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Months</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>