force-app/main/default/objects/CommissionMonth__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The end date of the commission month</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>