force-app/main/default/objects/CommissionMonth__c/fields/NSSStatus__c.field-meta.xml
<CustomField>
    <fullName>NSSStatus__c</fullName>
    <inlineHelpText>The status of the commission month for NSS</inlineHelpText>
    <label>NSS Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>