force-app/main/default/objects/CommissionMonth__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The start date of the commission month</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>